<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_apps"
                android:textColor="@color/sesl_list_subheader_text_color"
                android:textSize="@dimen/sesl_list_subheader_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="16.0dip"
                android:background="@drawable/sesl_color_picker_divider" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_apps_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/filter_all" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_apps_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/filter_user" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_apps_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/filter_system" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_state"
                android:textColor="@color/sesl_list_subheader_text_color"
                android:textSize="@dimen/sesl_list_subheader_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="16.0dip"
                android:background="@drawable/sesl_color_picker_divider" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_state_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/filter_all" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_state_checked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/filter_checked" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_state_unchecked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/filter_unchecked" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>